// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelationWidget renders a full relation view widget component 1`] = `
<a
  className="metadata relation widget"
  href="/a-page"
  onClick={[Function]}
  title=""
>
  <svg
    className="icon icon-margin"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    onClick={null}
    style={
      Object {
        "fill": "#878f93",
        "height": "20px",
        "width": "auto",
      }
    }
    viewBox=""
    xmlns=""
  />
  Foo Bar
</a>
`;

exports[`RelationWidget renders a full relation view widget component with children 1`] = `
<a
  className="metadata relation widget Document private"
  href="/a-page"
  onClick={[Function]}
  title="Bar Foo"
>
  <svg
    className="icon icon-margin"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<title>Document</title>undefined",
      }
    }
    onClick={null}
    style={
      Object {
        "fill": "#878f93",
        "height": "20px",
        "width": "auto",
      }
    }
    viewBox=""
    xmlns=""
  />
  <strong>
    Foo Bar
  </strong>
</a>
`;

exports[`RelationWidget renders a relation view widget component 1`] = `
<a
  className="metadata relation widget"
  href="/"
  onClick={[Function]}
  title=""
>
  <svg
    className="icon icon-margin"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    onClick={null}
    style={
      Object {
        "fill": "#878f93",
        "height": "20px",
        "width": "auto",
      }
    }
    viewBox=""
    xmlns=""
  />
  Foo Bar
</a>
`;

exports[`RelationWidget renders an empty relation view widget component 1`] = `null`;
